# NanoVNA-UTN-Toolkit

./: LICENSE  PROGRESS_BAR_IMPLEMENTATION.md  README.md  SWEEP_ANALYSIS_FINAL.md  SWEEP_IMPLEMENTATION.md  check_nanovna.py  main.py  pyproject.toml  requirements.txt  settings.ini  simple_connection_test.py  simple_vna_test.py  vna_tester.py
SIMCAL/: dut.s2p  match.s1p  open_1.s1p  short.s1p  thru.s2p
src/NanoVNA_UTN_Toolkit/: __init__.py  __main__.py  main.py  utils.py
src/NanoVNA_UTN_Toolkit/Hardware/: LiteVNA64.py  VNA.py  VNABase.py  Version.py  __init__.py
src/NanoVNA_UTN_Toolkit/calibration/: calibration_manager.py
src/NanoVNA_UTN_Toolkit/calibration/Kits/: 1PortN_Calibration_20251014_143736.cal  OSM_Calibration_20251014_135118.cal  OSM_Calibration_20251014_141635.cal
src/NanoVNA_UTN_Toolkit/calibration/Kits/Normalization_Calibration_20251023_101515/: transmission_tracking.s2p
src/NanoVNA_UTN_Toolkit/calibration/Kits/Normalization_Calibration_20251023_101540/: transmission_tracking.s2p
src/NanoVNA_UTN_Toolkit/calibration/config/: CompleteOSM_Test.cal  OSM_Calibration_20251008_011841.cal  OSM_Calibration_20251008_013626.cal  OSM_Calibration_20251008_020624.cal  OSM_Calibration_20251009_124255.cal  OSM_Calibration_20251009_125454.cal  OSM_Calibration_20251009_125720.cal  OSM_Calibration_20251009_130420.cal  OSM_Calibration_20251009_130546.cal  OSM_Calibration_20251011_095921.cal  OSM_Calibration_20251011_100009.cal  OSM_Calibration_20251011_100340.cal  OSM_Calibration_20251011_101343.cal  OSM_Calibration_20251011_101620.cal  OSM_Calibration_20251011_101836.cal  OSM_Calibration_20251013_083840.cal  calibration.cal  calibration_config.ini  measurement_numbers.ini  test_osm_calibration.cal
src/NanoVNA_UTN_Toolkit/calibration/kits/1Port+N/: reflection_tracking.s1p  source_match.s1p
src/NanoVNA_UTN_Toolkit/calibration/kits/1PortN_Calibration_20251015_201003/: directivity.s1p  reflection_tracking.s1p  source_match.s1p  transmission_tracking.s2p
src/NanoVNA_UTN_Toolkit/calibration/kits/1PortN_Calibration_20251018_132130/: directivity.s1p  reflection_tracking.s1p  source_match.s1p
src/NanoVNA_UTN_Toolkit/calibration/kits/Enhanced Response_Calibration_20251014_174314/: directivity.s1p  reflection_tracking.s1p  source_match.s1p  transmission_tracking.s2p
src/NanoVNA_UTN_Toolkit/calibration/kits/Enhanced Response_Calibration_20251015_201522/: directivity.s1p  reflection_tracking.s1p  source_match.s1p  transmission_tracking.s2p
src/NanoVNA_UTN_Toolkit/calibration/kits/Enhanced Response_Calibration_20251021_120040/: reflection_tracking.s1p  transmission_tracking.s2p
src/NanoVNA_UTN_Toolkit/calibration/kits/Enhanced Response_Calibration_20251025_164200/: directivity.s1p
src/NanoVNA_UTN_Toolkit/calibration/osm_results/: directivity.s1p  match.s1p  open.s1p  reflection_tracking.s1p  short.s1p  source_match.s1p  thru.s2p
src/NanoVNA_UTN_Toolkit/calibration/thru_results/: thru.s2p
src/NanoVNA_UTN_Toolkit/compat/: __init__.py  version_compat.py
src/NanoVNA_UTN_Toolkit/examples/: README.md  __init__.py
src/NanoVNA_UTN_Toolkit/exporters/: __init__.py  latex_exporter.py  touchstone_exporter.py
src/NanoVNA_UTN_Toolkit/tools/: README.md  __init__.py  check_nanovna.py  dfu_communicator.py  nano_vna_checker.py
src/NanoVNA_UTN_Toolkit/touchstone/: __init__.py
src/NanoVNA_UTN_Toolkit/ui/: __init__.py  connection_window.py  graphics_window.py  log_handler.py  welcome_windows.py  wizard_windows.py
src/NanoVNA_UTN_Toolkit/ui/Calibration_Config/: calibration_config.ini
src/NanoVNA_UTN_Toolkit/ui/calibration/: errors.py  kits.py  methods.py
src/NanoVNA_UTN_Toolkit/ui/export/: __init__.py  export_dialog.py
src/NanoVNA_UTN_Toolkit/ui/graphics_windows/: edit_graphics_window.py  view_window.py
src/NanoVNA_UTN_Toolkit/ui/sweep_window/: README.md  __init__.py  device_limits_demo.py  simple_test.py  sweep_options_window.py  test_cancel.py  test_device_limits.py  test_sweep_window.py  test_units.py
src/NanoVNA_UTN_Toolkit/ui/utils/: edit_graphics_utils.py  graphics_utils.py  view_utils.py
src/NanoVNA_UTN_Toolkit/utils/: __init__.py  device_parser.py  magnitude_chat_utils.py  smith_chart_utils.py  version.py  version_compat.py
src/NanoVNA_UTN_Toolkit/workers/: __init__.py  device_worker.py
src/calibration/config/: measurement_numbers.ini
tests/: test_export.s2p  test_frequency_formatting.py  test_pynanovna.py  test_touchstone_export.py  test_utils.py
(+57 files in other folders)
