[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "NanoVNA_UTN_Toolkit"
version = "0.1.0"
description = "NanoVNA GUI application"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Fernando Castro Canosa", github = "fcascan" }
]
dependencies = [
    "PyQt5",
    "importlib-metadata; python_version<'3.8'"
]
requires-python = ">=3.7"

[tool.setuptools.packages.find]
where = ["src"]
