[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "NanoVNA_UTN_Toolkit"
version = "0.1.0"
description = "NanoVNA GUI application"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Fernando Castro Canosa", github = "https://github.com/fcascan"},
    {name = "Axel Nathanel Nahum", github = "https://github.com/Axel-Nahum"},
    {name = "Hugo Alejandro Gomez", github = "https://github.com/hugomezok"},
    {name = "Uriel Sandomir Laham", github = "https://github.com/usandomir"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: User Interfaces",
]

requires-python = ">=3.9"
dependencies = [
    "pyserial>=3.5",
    "PySide6>=6.0",
    "matplotlib>=3.6.2",
    "numpy>=1.26.4",
    "scipy>=1.13.0",
    "qtawesome>=1.2.0",
    "importlib-metadata; python_version<'3.8'"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=3.0.0",
    "black>=21.0",
    "isort>=5.0",
    "mypy>=0.910",
    "flake8>=4.0.0",
]

docs = [
    "sphinx>=7.3.7",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autobuild>=2024.4.16",
    "sphinx-autodoc-typehints>=2.2.2",
]

[project.urls]
Homepage = "https://github.com/fcascan/NanoVNA-UTN-Toolkit"
Documentation = "https://github.com/fcascan/NanoVNA-UTN-Toolkit#readme"
Issues = "https://github.com/fcascan/NanoVNA-UTN-Toolkit/issues"
Source = "https://github.com/fcascan/NanoVNA-UTN-Toolkit"

[project.scripts]
NanoVNA_UTN_Toolkit = "NanoVNA_UTN_Toolkit:main"

[tool.setuptools]
package-dir = { "" = "src" }
packages = find_namespace:

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points]
# Add any entry points here if needed

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.setuptools]
package-dir = { "" = "src" }
packages = find:

[tool.setuptools.packages.find]
where = ["src"]
